Closed Bug 844750 Opened 13 years ago Closed 13 years ago

CSS background-images don't render properly

Categories

(Core :: Layout, defect)

19 Branch
x86_64
Windows 7
defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla22
Tracking Status
firefox19 --- wontfix
firefox20 + verified
firefox21 + verified
firefox22 + verified

People

(Reporter: fistasheq+bugzilla, Assigned: mattwoodrow)

References

()

Details

(Keywords: regression)

Attachments

(3 files)

Attached image screen.jpg
User Agent: Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.11 (KHTML, like Gecko) Chrome/23.0.1300.0 Iron/23.0.1300.0 Safari/537.11 Steps to reproduce: Updated to Firefox 19.0. Actual results: Background images in td cells (set using the css background property), render on page load only in the area beyond the browser window. The rest of them rendered fine. Expected results: All of the images should have been visible immediately. You can check it yourself, just follow the URL from the attached screenshot.
They all display for me and I'm on Windows 7. Did you try safe mode?
I can reproduce this with Firefox19 on win7. Scrolling makes the missing area appear so it seems to be an invalidation issue but it's already fixed in the Firefox20beta. Chris: Please reopen this report if this is not fixed in Firefox20 (beta)
Status: UNCONFIRMED → RESOLVED
Closed: 13 years ago
Resolution: --- → WORKSFORME
In Firefox20beta it looks better, but images are rendered with a little delay. It also looks kinda buggy in some cases: try refreshing with Ctrl+F5 and scrolling down or hitting End right after the page loads.
Status: RESOLVED → UNCONFIRMED
Resolution: WORKSFORME → ---
(In reply to Chris from comment #3) > In Firefox20beta it looks better, but images are rendered with a little > delay. It also looks kinda buggy in some cases: try refreshing with Ctrl+F5 > and scrolling down or hitting End right after the page loads. Confirming with Mozilla/5.0 (Windows NT 6.1; WOW64; rv:22.0) Gecko/20130225 Firefox/22.0 ID:20130225031141 CSet: c233837cce08 with HWA on and off.
Last good nightly: 2012-11-06 First bad nightly: 2012-11-07 Pushlog: http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=f9c2c266e7aa&tochange=e587aa26326e
You are right, i can still see it Last good nightly: 2012-11-06 First bad nightly: 2012-11-07 Pushlog: http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=f9c2c266e7aa&tochan ge=e587aa26326e will try to bisect further
Status: UNCONFIRMED → NEW
Ever confirmed: true
The first bad revision is: changeset: 112454:8d793eb6a281 user: Matt Woodrow <mwoodrow@mozilla.com> date: Wed Nov 07 11:04:53 2012 +1300 summary: Bug 798964 - Don't invalidate nsDisplayBackgroundColor if only the image changed. r=roc
Blocks: 798964
Component: Untriaged → Layout
Product: Firefox → Core
Assignee: nobody → matt.woodrow
Hopefully the inline comments explains this well enough. Invalidation when we change the background image of a table component (like when it loads later than the page, or we modifiy the document) wasn't working.
Attachment #719292 - Flags: review?(roc)
Comment on attachment 719292 [details] [diff] [review] Don't use per-display-item invalidation for tables Review of attachment 719292 [details] [diff] [review]: ----------------------------------------------------------------- Please add a reftest.
Attachment #719292 - Flags: review?(roc) → review+
We'll want this (and the coming reftest) ready to uplift before Tues Mar 12th when we go to build on beta 4.
Attached patch ReftestSplinter Review
This seems to be failing intermittently on try, but not locally. I believe it's because we paint before the image has decoded.
Status: NEW → RESOLVED
Closed: 13 years ago13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla22
Comment on attachment 719292 [details] [diff] [review] Don't use per-display-item invalidation for tables [Approval Request Comment] Bug caused by (feature/regressing bug #): Bug 798964 User impact if declined: Incorrect invalidation for some table background images Testing completed (on m-c, etc.): Been on m-c for a while Risk to taking this patch (and alternatives if risky): Very low risk, just skips an optimization in cases where it doesn't work. String or UUID changes made by this patch: None
Attachment #719292 - Flags: approval-mozilla-beta?
Attachment #719292 - Flags: approval-mozilla-aurora?
Attachment #719292 - Flags: approval-mozilla-beta?
Attachment #719292 - Flags: approval-mozilla-beta+
Attachment #719292 - Flags: approval-mozilla-aurora?
Attachment #719292 - Flags: approval-mozilla-aurora+
I confirm the fix is verified on Windows 7 x64 builds: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:20.0) Gecko/20100101 Firefox/20.0(20130313170052) Mozilla/5.0 (Windows NT 6.1; WOW64; rv:21.0) Gecko/20130313 Firefox/21.0(20130313042013) Mozilla/5.0 (Windows NT 6.1; WOW64; rv:22.0) Gecko/20130313 Firefox/22.0(20130313031041)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: