Bug 844750 - Don't use per-display-item invalidation for table frames. r=roc